syntax = "proto3";

package domain;

option go_package = "pkg/pb;pb";

import "base.proto";

message PartnerAddress {
  Entity Entity = 1;
  string id_partner = 2;
  string id_address = 3;
}

message PartnerAddressListRequest {
  PartnerAddress payload = 1;
  Metadata metadata = 2;
}

message PartnerAddressResponse {
  PartnerAddress response = 1;
}

message PartnerAddressListResponse {
  repeated PartnerAddress response = 1;
}

service PartnerAddressService {
  rpc Create(PartnerAddress) returns (PartnerAddressResponse);
  rpc Update(PartnerAddress) returns (PartnerAddressResponse);
  rpc FindAll(PartnerAddressListRequest) returns (PartnerAddressListResponse);
}
